# Nexus

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  _chk.py  nexus_test_output.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  mypy.yml  publish.yml  test.yml
config/: nexus.yaml
docker/: Dockerfile
docs/: ADVANCED_USAGE.md  API.md  ARCHITECTURE.md  BEST_PRACTICES.md  CHANGELOG.md  CLI_REFERENCE.md  CONFIG_REFERENCE.md  CONTRIBUTING.md  DEVELOPMENT.md  ENV_VARS.md  EXAMPLES.md  FAQ.md  GLOSSARY.md  INSTALLATION.md  INTEGRATIONS.md  LICENSE  MCP.md  MEMORY.md  MIGRATION.md  PERFORMANCE.md  PLUGINS.md  REACT.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md
nexus/: __init__.py  __main__.py  __version__.py  cli.py  mcp_server.py
nexus/commands/: config_edit.py  run.py
nexus/config/: .env.example
nexus/core/: __init__.py  agent.py  agent_react.py  autodetect.py  banners.py  config.py  content_loader.py  embeddings.py  error_parser.py  health.py  history.py  i18n.py  interactive_ui.py  logo.py  memory.py  paths.py  plugin.py  provider_factory.py  providers.py  rag.py  resilience.py  retrieval.py  security.py  theme.py  tiny_fallback.py  usage_stats.py  vector_store.py  web_search.py
nexus/locale/: de.json  en.json  es.json  fr.json  ru.json
scripts/: append_cli.py  install.ps1  install.sh
tests/: test_agent.py  test_agent_react.py  test_health.py  test_history.py  test_i18n.py  test_interactive_ui.py  test_mcp_server.py  test_memory.py  test_plugin.py  test_provider_factory.py  test_providers.py  test_rag.py  test_resilience.py  test_run_command.py  test_run_command_integration.py  test_security.py  test_tiny_fallback.py  test_web_search.py
tests/integration/: __init__.py  test_providers_live.py
