[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus"
version = "1.0.0"
description = "Nexus — ИИ-ассистент с загрузкой контента из URL и web-поиском"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Nexus Team" },
]
keywords = [
    "ai", "assistant", "cli", "llm", "groq", "openai", "anthropic",
    "ollama", "web-search", "youtube", "pdf", "docx",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "groq",
    "requests",
    "beautifulsoup4",
    "python-dotenv",
    "pyyaml",
    "rich",
    "youtube-transcript-api",
    "pypdf",
    "python-docx",
    "python-pptx",
    "openpyxl",
]

[project.optional-dependencies]
all = [
    "openai",
    "anthropic",
    "ollama",
    "mcp",
]
openai = ["openai"]
anthropic = ["anthropic"]
ollama = ["ollama"]
mcp = ["mcp"]
interactive = ["prompt-toolkit"]

[project.urls]
Homepage = "https://github.com/BaToN41cK/Nexus"
Repository = "https://github.com/BaToN41cK/Nexus.git"
Documentation = "https://github.com/BaToN41cK/Nexus/blob/main/docs/README.md"

[project.scripts]
nexus = "nexus.cli:main"

[tool.setuptools.packages.find]
include = ["nexus*"]

[tool.setuptools.package-data]
nexus = [
    "config/.env.example",
    "config/nexus.yaml",
    "locale/*.json",
    "config/*",
]

[tool.setuptools.package-dir]
"" = "."
