[tool.coverage.run]
source = ["nexus"]
omit = [
    "*/tests/*",
    "nexus/locale/*",
    "nexus/mcp_server.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if TYPE_CHECKING:",
    "from typing import",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "error::DeprecationWarning:nexus",
    "ignore::DeprecationWarning:botocore",
    "ignore::DeprecationWarning:urllib3",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus"
dynamic = ["version"]
description = "Nexus — AI assistant with multi-provider LLM support, web search, content loading, and ReAct agent"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sergey Gerasimenko", email = "Sergey.gerasimenko1208@gmail.com" },
]
maintainers = [
    { name = "Sergey Gerasimenko", email = "Sergey.gerasimenko1208@gmail.com" },
]
keywords = [
    "ai", "assistant", "cli", "llm", "groq", "openai", "anthropic",
    "ollama", "web-search", "youtube", "pdf", "docx",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "groq>=0.11",
    "requests>=2.28",
    "beautifulsoup4",
    "python-dotenv",
    "pyyaml",
    "rich",
    "youtube-transcript-api",
    "pypdf",
    "python-docx",
    "python-pptx",
    "openpyxl",
]

[project.optional-dependencies]
all = [
    "openai",
    "anthropic",
    "ollama",
    "mcp",
    "sentence-transformers",
    "faiss-cpu",
    "chromadb",
    "prompt-toolkit",
]
openai = ["openai"]
anthropic = ["anthropic"]
ollama = ["ollama"]
mcp = ["mcp"]
rag = [
    "sentence-transformers>=2.2,<4.0",
    "faiss-cpu>=1.7,<2.0",
]
chroma = [
    "chromadb>=0.4,<1.0",
]
openai-embeddings = ["openai"]
interactive = ["prompt-toolkit"]

[project.urls]
Homepage = "https://github.com/BaToN41cK/Nexus"
Repository = "https://github.com/BaToN41cK/Nexus.git"
Documentation = "https://github.com/BaToN41cK/Nexus/blob/main/docs/README.md"
"Bug Tracker" = "https://github.com/BaToN41cK/Nexus/issues"
"Changelog" = "https://github.com/BaToN41cK/Nexus/blob/main/docs/CHANGELOG.md"

[project.scripts]
nexus = "nexus.cli:main"

[tool.setuptools.dynamic]
version = {attr = "nexus.__version__.__version__"}

[tool.setuptools.packages.find]
include = ["nexus*"]

[tool.setuptools.package-data]
nexus = [
    "config/.env.example",
    "config/nexus.yaml",
    "locale/*.json",
    "config/*",
]

[tool.setuptools.package-dir]
"" = "."

# ---------------------------------------------------------------------------
# Ruff (linter + formatter) — replaces flake8/isort/black
# https://docs.astral.sh/ruff/
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = [
    "build",
    "dist",
    ".venv",
    "venv",
    "__pycache__",
]

[tool.ruff.lint]
# A reasonable starter set; tighten over time.
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "B",     # flake8-bugbear
    "UP",    # pyupgrade (modern syntax)
    "N",     # pep8-naming
    "SIM",   # flake8-simplify
    "C4",    # flake8-comprehensions
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function call in default argument (FastAPI-style)
    "N818",   # exception class names should end in Error
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "N802"]   # asserts + test naming are fine
"nexus/locale/*" = ["E402"]    # generated, ignore

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------------------
# mypy (static type checker)
# Run via:  make typecheck   /   mypy nexus
# Start permissive, tighten over time.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false       # start lenient
disallow_incomplete_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
ignore_missing_imports = true       # many third-party libs have no stubs
exclude = [
    "build/",
    "dist/",
    "tests/",
    "nexus/locale/",
    "nexus/mcp_server.py",          # optional dep
]

[[tool.mypy.overrides]]
module = "tests.*"
check_untyped_defs = false
disallow_untyped_defs = false
